# rs-1

./: .gitignore  AGENTS.md  FIXED_ISSUE.md  LICENSE  README.md
.github/: test-from-hammer.md
.github/workflows/: anvil-review.yml  contracts.yml  forge-synthesis.yml  hammer-review.yml
cloud/: package.json  tsconfig.json  wrangler.toml
cloud/migrations/: 0001_initial_schema.sql
cloud/src/: index.ts
docs/: HARDWAREOS_MODULE_TRACKING.md  HARDWAREOS_SPEC.md  PRD_RS1.md  PRODUCT_SPEC_RS1.md  REFERENCE_SENSY_ZONE_EDITOR.md  REQUIREMENTS_RS1.md  REQUIREMENTS_TRACEABILITY_MATRIX.md  RFD_001_HARDWAREOS_ARCHITECTURE_REVIEW.md  TECH_REQUIREMENTS_RS1.md  VALIDATION_PLAN_RS1.md  WIRING.md  opticworks_rs1_competitive_analysis_v2.docx.md
docs/archived/: RFD_002_CONTRACT_VALIDATION.md  RFD_004_RS1_SPEC_REVIEW.md  SPRINT.md
docs/automation/: hammer-review-test.md  hammer-review.md
docs/cloud/: INFRASTRUCTURE.md  (+4 more)
firmware/: CMakeLists.txt  partitions.csv  sdkconfig.defaults
firmware/components/ota_manager/: CMakeLists.txt  ota_manager.c
firmware/components/ota_manager/include/: ota_manager.h
firmware/components/radar_ingest/: CMakeLists.txt  ld2410_parser.c  ld2450_parser.c  radar_ingest.c
firmware/components/radar_ingest/include/: ld2410_parser.h  ld2450_parser.h  radar_ingest.h
firmware/components/timebase/: CMakeLists.txt  timebase.c
firmware/components/timebase/include/: timebase.h
firmware/components/zone_editor/: CMakeLists.txt  zone_editor.c
firmware/components/zone_editor/include/: zone_editor.h
scripts/: hammer-review-prompt.py  run-hammer-review.sh
(+127 files in other folders)
